# fast_api_utils

./: .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml  tox.ini
alembic/: env.py
alembic/versions/: 6896ac85e239_create_account_table.py
backend_fastapi/: fast_api_application.py  fastapi_application.py  fastapi_asgi.py
backend_fastapi/apps/items/domain/: item.py
backend_fastapi/apps/items/entity/: item.py
backend_fastapi/apps/items/services/: crud.py
backend_fastapi/core/: clickhouse.py  database.py  database_clear.py  fastapi_application.py  settings.py
backend_fastapi/delete_me_pls/: create_clickhouse_db.py  init_items.py
backend_fastapi/entity/: films.py  persons.py
backend_fastapi/internal/apps/dictionaries/: services.py
backend_fastapi/internal/apps/films/: services.py
backend_fastapi/internal/dictionaries/: domain.py  services.py
backend_fastapi/internal/entity/: __init__.py  dictionaries.py  films.py  persons.py
backend_fastapi/internal/entity_clickhouse/: __init__.py  dictionaries.py
backend_fastapi/internal/films/: domain.py  services.py
backend_fastapi/internal/persons/: domain.py  services.py
backend_fastapi/routers/: dictionaries.py  films.py  persons.py
backend_fastapi/utils/: domain.py  utils.py
src/: fastapi_application.py
src/app/clickhouse_test/: models.py  router.py  service.py
src/app/dictionaries/: models.py  router.py
src/app/dictionaries/schemas/: genre.py  (+2 more)
src/app/leonardo/: factories.py  models.py
src/core/: clickhouse.py  database.py  fastapi_application.py  settings.py
(+10 files in other folders)
