[tool.poetry]
name = "fast-api-utils"
version = "0.1.0"
description = ""
authors = ["ruslan <belyaev@raketa.im>"]
readme = "README.md"
packages = [{include = "fast_api_utils"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0.95.0"}
pydantic = "^1.10.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
