[tool.poetry]
name = "fast-api-utils"
version = "0.1.0"
description = ""
authors = ["ruslan <belyaev@raketa.im>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0.95.0"}
pydantic = "^1.10.7"
SQLAlchemy = "^2.0.12"
asyncpg = "^0.27.0"
uvicorn = "^0.22.0"


[tool.poetry.group.dev.dependencies]
alembic = "^1.10.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
